# ad-inventory-forecast

./: .env.example  .gcloudignore  .gitignore  Dockerfile  README.md  cloudbuild.yaml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.streamlit/: config.toml
app/: __init__.py  constants.py  main.py  messages.py
app/components/: __init__.py  charts.py  filters.py  sidebar.py  tables.py
app/data/: __init__.py  queries.py
app/pages/: 1_Forecast_Explorer.py  2_Model_Comparison.py  3_Decomposition.py  4_Anomaly_Detection.py  5_Architecture.py
app/utils/: __init__.py  helpers.py  state.py  validation.py
config/: __init__.py  events.py  helpers.py  settings.py
data/reference/: data_card.md  us_holidays.csv
data/validation/: device_splits.csv  distribution_stats.csv  sample_timeseries.csv  weekday_patterns.csv
pipelines/: arima_retrain.py
scripts/: __init__.py  analyze_ci_widths.py  data_validation.py  diagnose_anomalies.py  extend_holidays.py  plot_timeseries.py  pre_model_checks.py  run_model_pipeline.py  run_pipeline.py  spot_check_data.py  spot_check_decomposition.py
scripts/_archive/: explore_google_trends.py
sql/01_schema/: create_dataset.sql  create_model_tables.sql  create_tables.sql
sql/02_extract/: wikipedia_pageviews.sql
sql/03_transform/: backfill_gaps.sql  build_daily_impressions.sql
sql/04_validate/: quality_checks.sql
src/: __init__.py  bq_client.py  cli.py  logging_config.py  pipeline_utils.py  printing_utils.py  sql_runner.py  validators.py
tests/: test_bq_client.py  test_sql_runner.py  test_validators.py
(+15 files in other folders)
